add consultation module
